# sustainabench

./: .gitignore  README.md  benchmark.py  check.sh  pyproject.toml  todo.txt
configs/: cpu_multi.yaml  cpu_single.yaml  gpu_train.yaml  workload.yaml
configs/indicators/: example.yaml  main.yaml  metrics_dict.yaml
configs/measurement/: example.yaml  likwid.yaml  papi.yaml
configs/metrics/: early.yaml  example.yaml  main.yaml  metrics_dict.yaml
configs/workload/: example.yaml
configs/workloads/: default.yaml  example.yaml  gpu_burn.yaml  gpu_mm.yaml  hpcg.yaml  hpl.yaml  nvidia-hpcg.yaml  nvidia-hpl.yaml  nvidia-stream.yaml  stream.yaml  stress-ng.yaml  vllm.yaml
plotting/: all_plots.sh  breakdown_cpu_plotting.py  breakdown_gpu_plotting.py  breakdown_plot.py  breakdown_stats.py  cmd.txt  cpu-plotting-2022.py  cpu-plotting-2023.py  cpu-plotting-FR.py  cpu-plotting-PL.py  cpu-plotting.py  determine_ranges.py  energy_breakdown.py  get_performance_data.py  gpu-plotting-2022.py  gpu-plotting-2023.py  gpu-plotting-FR.py  gpu-plotting-PL.py  gpu-plotting.py  handle_results.py  plot.py  results_generate.sh  split_csv_tables.py  stats.py
plotting/performance_per_carbon_tables/: FR_2024_Tables.csv  NL_2022_Tables.csv  NL_2024_Tables.csv
scripts/das6/: cpu_benchmarks.sh  gpu_benchmarks.sh
sustainabench/: cli.py
sustainabench/commands/: result.py  run.py
sustainabench/core/: backend.py  context.py  interfaces.py  models.py  runner.py
sustainabench/indicators/: __init__.py  base.py  carbon.py
sustainabench/measurement/: __init__.py  base.py  cpu.py  io.py  (+9 more)
(+820 files in other folders)
